[workspace]
members = [ "pallet", "primitives" ]

[workspace.dependencies]
parity-scale-codec = { version = "3.6.5", default-features = false }
scale-info = { version = "2.10.0", default-features = false, features = ["derive"] }

frame-support = { version = "25.0.0", default-features = false }
frame-system = { version = "25.0.0", default-features = false }
frame-benchmarking = { version = "25.0.0", default-features = false }
sp-runtime = { version = "28.0.0", default-features = false }
sp-std = { version = "12.0.0", default-features = false }
sp-core = { version = "25.0.0", default-features = false }
cumulus-primitives-core = { version = "0.4.0", default-features = false }

xcm = { package = "staging-xcm", version = "4.0.0", default-features = false }
xcm-executor = { package = "staging-xcm-executor", version = "4.0.0", default-features = false }
xcm-builder = { package = "staging-xcm-builder", version = "4.0.0", default-features = false }

log = { version = "0.4.17", default-features = false }
derive_more = "0.99.17"

xnft-primitives = { path = "primitives" }
