[package]
authors = ["Unique Network <support@uniquenetwork.io>"]
description = "XNFT primitives"
edition = "2021"
license = 'GPLv3'
name = "xnft-primitives"
repository = 'https://github.com/UniqueNetwork/xnft'
version = "0.1.0"

[dependencies]
frame-system = { workspace = true }
frame-support = { workspace = true }
scale-info = { workspace = true }
sp-std = { workspace = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true }
parity-scale-codec = { workspace = true }

xcm = { workspace = true }
xcm-executor = { workspace = true }
xcm-builder = { workspace = true }

[features]
default = ["std"]
std = [
	"frame-support/std",
	"parity-scale-codec/std",
	"sp-std/std",
	"sp-core/std",
	"sp-runtime/std",
    "xcm/std",
	"xcm-executor/std",
	"xcm-builder/std",
]
